--- a/aboutus.html
+++ b/aboutus.html
@@ -125,8 +125,17 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
           <li class="nav-item">
             <a class="nav-link" href="./service.html">Service</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./packages.html">Packages</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Packages
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="./nongearbicycleservice.html">Non Gear Bicycle Service</a></li>
+              <li><a class="dropdown-item" href="./gearbicycleservice.html">Gear Bicycle Service</a></li>
+              <li><a class="dropdown-item" href="./roadbicycleservice.html">Road Bicycle Service</a></li>
+              <li><a class="dropdown-item" href="./newbicycleservices.html">New Bicycle Assembling</a></li>
+              <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./gallery.html">Gallery</a>
@@ -453,7 +462,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                           <a href="./aboutus.html">About US</a>
                       </li>
                       <li>
-                          <a href="./packages.html">Our Packages</a>
+                          <a href="..html">Our Packages</a>
                       </li>
                       <li>
                           <a href="./service.html">Services</a>
