--- a/dismantlingandboxing.html
+++ b/dismantlingandboxing.html
@@ -58,13 +58,14 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
               Packages
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./nongearbicycleservice.html">Non Gear Bicycle Service</a></li>
-              <li><a class="dropdown-item" href="./gearbicycleservice.html">Gear Bicycle Service</a></li>
-              <li><a class="dropdown-item" href="./roadbicycleservice.html">Road Bicycle Service</a></li>
-              <li><a class="dropdown-item" href="./newbicycleservices.html">New Bicycle Assembling</a></li>
-              <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
-            </ul>
+                <li><a class="dropdown-item" href="./nongearbicycleservice.html">Non Gear Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./gearbicycleservice.html">Gear Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./roadbicycleservice.html">Road Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./newbicycleservices.html">New Bicycle Assembling</a></li>
+                <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
+              </ul>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="./gallery.html">Gallery</a>
           </li>
@@ -98,7 +99,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                    <div class="page-title-content">
                        <ul>
                            <li><a href="index.html">Home</a></li>
-                           <li> Book My Slot</li>
+                           <li>Dismantling and Boxing</li>
                        </ul>
                    </div>
                </div>
@@ -107,6 +108,17 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
    </div>
 </section>
 
+
+
+<section class="section-padding">
+  <div class="container">
+    <p class="sub-heading-content">Packages</p>
+    <p class="sub-heading-second" style="font-size: 40px;">Dismantling and Boxing Package</p>
+  </div>
+  <div class="container" style="background-color: #3635352f; border-radius: 10px; padding: 20px;">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum incidunt neque iusto! Recusandae nihil obcaecati omnis perspiciatis ab officiis, minus corporis. Ipsum sequi sed velit rem fugit magni, incidunt repellendus?
+  </div>
+</section>
 
 
 
