--- a/gearbicycleservice.html
+++ b/gearbicycleservice.html
@@ -58,13 +58,14 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
               Packages
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./nongearbicycleservice.html">Non Gear Bicycle Service</a></li>
-              <li><a class="dropdown-item" href="./gearbicycleservice.html">Gear Bicycle Service</a></li>
-              <li><a class="dropdown-item" href="./roadbicycleservice.html">Road Bicycle Service</a></li>
-              <li><a class="dropdown-item" href="./newbicycleservices.html">New Bicycle Assembling</a></li>
-              <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
-            </ul>
+                <li><a class="dropdown-item" href="./nongearbicycleservice.html">Non Gear Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./gearbicycleservice.html">Gear Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./roadbicycleservice.html">Road Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./newbicycleservices.html">New Bicycle Assembling</a></li>
+                <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
+              </ul>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="./gallery.html">Gallery</a>
           </li>
@@ -98,7 +99,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                    <div class="page-title-content">
                        <ul>
                            <li><a href="index.html">Home</a></li>
-                           <li> Book My Slot</li>
+                           <li>Gear Bicycle Service</li>
                        </ul>
                    </div>
                </div>
@@ -107,6 +108,128 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
    </div>
 </section>
 
+
+<section class="section-padding">
+  <div class="container">
+    <p class="sub-heading-content">Packages</p>
+    <p class="sub-heading-second" style="font-size: 40px;">Gear Bicycle Service Package</p>
+    <div class="container" style="background-color: #3635352f; border-radius: 10px; padding: 20px;">
+      <h2 class="loch2" style=" font-size: 18px;font-weight: 700;">Gear Bicycle Repair &amp; Service at Fix My
+        Cycle!Conquer Shifting Issues</h2>
+
+      <p style="margin-top: 10px;">Is your gear cycle giving you trouble? Experiencing clunky shifting, grinding
+        noises, or complete gear failure? Fix My Cycle offers comprehensive gear bicycle repair and service packages
+        to get your ride back in top form!</p>
+
+      <h3 class="lohe" style="text-transform: capitalize;font-size: 16px;font-weight: 800;margin-top: 15px;">We
+        specialize in all things
+        gears:</h3>
+      <ul style="margin-top: 10px; padding-left: calc(2* 25px);">
+        <li><strong>Gear Adjustments &amp; Tuning:</strong> We can diagnose and fix common gear problems like
+          inaccurate shifting, chain slippage, and misalignment.</li>
+        <li><strong>Derailleur Service:</strong> Keep your derailleur operating smoothly with adjustments, cleaning,
+          and lubrication.</li>
+        <li><strong>Cassette &amp; Chainring Inspection:</strong> We’ll identify worn-out components before they cause
+          further issues.</li>
+        <li><strong>Complete Drivetrain Maintenance:</strong> Our services ensure a clean, efficient, and quiet
+          drivetrain for optimal performance.</li>
+      </ul>
+
+      <h3 class="lohe" style="text-transform: capitalize;font-size: 16px;font-weight: 800;margin-top: 15px;">Choose
+        the service that fits your needs:</h3>
+
+      <p><strong>Standard Service (Perfect for Regular Maintenance):</strong></p>
+
+      <ul style="padding-left: calc(2* 25px);margin-top: 10px;">
+        <li>Address minor gear adjustments and shifting issues.</li>
+        <li>Clean and degrease your drivetrain for a smoother ride.</li>
+        <li>Ensure confident stopping power with brake adjustments.</li>
+      </ul>
+
+      <p><strong>Advanced Service (Ideal for a More In-Depth Tune-Up):</strong></p>
+
+      <p><strong>Everything in the Standard Service, Plus:</strong></p>
+
+      <ul style="padding-left: calc(2* 25px);margin-top: 10px;">
+        <li>Comprehensive gear adjustments for optimized performance.</li>
+        <li>Derailleur hanger alignment check and adjustments (if needed).</li>
+        <li>Inspection for wear and tear on cassette and chainrings.</li>
+        <li>Complete lubrication of your entire drivetrain.</li>
+      </ul>
+
+      <p>Don’t let gear problems slow you down! Schedule your gear bicycle service appointment online today and experience the Fix My Cycle difference. Don’t let gear problems slow you down! Schedule your gear bicycle service appointment online today and experience the Fix My Cycle difference.</p>
+
+      <div class="row text-center">
+        <div class="col-12">
+          <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section class="section-padding">
+<div class="container">
+   <!-- First Card -->
+    <div class="row">
+   <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+       <strong>  Standard Service Package Starts  From Rs.1099/-*</strong>
+        <!-- <span class="toggle-icon">+</span> -->
+        <ul class="tablist">
+          <li>Inspection for wear and tear</li>
+       <li>Check and adjust Fork, Wheels, Hubs, Bottom Bracket, Headset and Stem</li>
+       <li>Checking and Tightening all screws and bolts</li>
+       <li>Bearings check (chargeable if bearings need to be replaced)</li>
+       <li>Check and adjust brakes</li>
+       <li>Gear and Drivetrain tuning and adjustment</li>
+       <li>Greasing of all the components</li>
+       <li>Degrease the drivetrain</li>
+       <li>Lubrication of Gear System</li>
+       <li>Lubrication of Brake System</li>
+       <li>Fixing Puncture (If any) and inflating the tires to accurate pressure</li>
+       <li> Wipe clean the bicycle</li>
+       <li>Test ride by service engineer</li>
+       <li>*Any spares consumed will be additional</li>
+        <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
+       </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Second Card -->
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+      <strong>  Advanced Service Package Starts  From Rs.1399/-*</strong>
+        <!-- <span class="toggle-icon">+</span> -->
+        <ul class="tablist">
+          <li>Inspection for entire bicycle</li>
+          <li>Check and adjust Fork, Wheels, Hubs, Bottom Bracket, Headset and Stem</li>
+          <li>Checking and Tightening all screws and bolts</li>
+          <li>Bearings check (chargeable if bearings need to be replaced)</li>
+          <li>Brakes checked, adjusted and cleaned</li>
+          <li>Gear and Drivetrain tuning and adjustment</li>
+          <li>Greasing of all the components</li>
+          <li>Degrease the drivetrain</li>
+          <li>Lubrication of Gear System</li>
+          <li>Lubrication of Brake System</li>
+          <li>Fixing Puncture (If any) and inflating the tires to accurate pressure</li>
+          <li>Wheel truing if required (Wheel Bend/ Broken Wheel repair not covered under the package)</li>
+          <li>Complete cleaning of Bicycle</li>
+          <li>Test ride by service engineer</li>
+          <li>*Any spares consumed will be additional</li>
+          <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
+       </ul>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</section>
 
 
 
