--- a/roadbicycleservice.html
+++ b/roadbicycleservice.html
@@ -53,9 +53,19 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
           <li class="nav-item">
             <a class="nav-link" href="./service.html">Service</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./packages.html">Packages</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Packages
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./nongearbicycleservice.html">Non Gear Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./gearbicycleservice.html">Gear Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./roadbicycleservice.html">Road Bicycle Service</a></li>
+                <li><a class="dropdown-item" href="./newbicycleservices.html">New Bicycle Assembling</a></li>
+                <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
+              </ul>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="./gallery.html">Gallery</a>
           </li>
@@ -79,6 +89,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   <!--  navbar -->
 
 
+
   <section class="">
     <!-- Start Page Title Area -->
     <div class=" page-title-area">
@@ -88,7 +99,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                    <div class="page-title-content">
                        <ul>
                            <li><a href="index.html">Home</a></li>
-                           <li>Packages</li>
+                           <li>Road Bicycle Service </li>
                        </ul>
                    </div>
                </div>
@@ -98,7 +109,15 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
 </section>
 
 
-
+<section class="section-padding">
+  <div class="container">
+    <p class="sub-heading-content">Packages</p>
+    <p class="sub-heading-second" style="font-size: 40px;">Road Bicycle Service Package</p>
+    <div class="container" style="background-color: #3635352f; border-radius: 10px; padding: 20px;">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum incidunt neque iusto! Recusandae nihil obcaecati omnis perspiciatis ab officiis, minus corporis. Ipsum sequi sed velit rem fugit magni, incidunt repellendus?
+        </div>
+  </div>
+</section>
 
 
   <section class="section-padding mt-5" >
@@ -118,7 +137,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
                           <a href="./aboutus.html">About US</a>
                       </li>
                       <li>
-                          <a href="./packages.html">Our Packages</a>
+                          <a href="..html">Our Packages</a>
                       </li>
                       <li>
                           <a href="./service.html">Services</a>
