logo and how it work section updated

--- a/dismantlingandboxing.html
+++ b/dismantlingandboxing.html
@@ -81,12 +81,14 @@
 
 <body>
 
-
+  <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i> <!-- Font Awesome icon -->
+  </button>
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;"><span
-          style="color: #08b427;">Track &</span> Trails</a>
+          style="color: #08b427;">Riders</span> Point</a>
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
