--- a/roadbicycleservice.html
+++ b/roadbicycleservice.html
@@ -81,12 +81,14 @@
 
 <body>
 
-
+  <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i> <!-- Font Awesome icon -->
+  </button>
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
       <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;"><span
-          style="color: #08b427;">Track &</span> Trails</a>
+          style="color: #08b427;">Riders</span> Point</a>
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
@@ -293,8 +295,7 @@
         <div class="row">
           <div class="col-lg-3">
             <a class="navbar-brand" href="#"
-              style="font-weight: bolder;color: inherit !important;font-size: 26px;"><span style="color: #08b427;">Track
-                &</span> Trails</a>
+              style="font-weight: bolder;color: inherit !important;font-size: 26px;"><span style="color: #08b427;">Riders</span> Point</a>
             <p style="font-size: 15px;padding: 15px 0;opacity: 0.8;">We is Company with experience over for 10 Years and
               we can give your best bikes in the world with accesories.</p>
 
