pre owned page design completed

--- a/bookmyslot.html
+++ b/bookmyslot.html
@@ -374,7 +374,7 @@ form .btn:hover{
   </section>
 
 
-
+<!-- email submit Started -->
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script type="text/javascript">
      (function(){
@@ -415,13 +415,14 @@ form .btn:hover{
           });
       });
   }
-  </script>
-  
-
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  </script> 
+  <!-- email submit END -->
 
 
- 
+
+
+
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
   <script src="asset/script.js"></script>
   <script src="asset/index.js"></script>
   <script src="asset/app.js"></script>
