--- a/preowned.html
+++ b/preowned.html
@@ -111,6 +111,27 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
 </section>
 
 
+<section class="section-padding">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <h3 class="section-title" style="font-weight: 600;">Effortlessly buy and sell authenticated pre-owned / Used bicycles with FMC Assured</h3>
+        <p>Buying and selling pre-owned bicycles can be a daunting task, but not anymore! With FMC Assured’s streamlined platform, you can now experience the ease and convenience of seamless transactions for authenticated pre-owned cycles. Our comprehensive process ensures that each bike is thoroughly inspected and certified by our team of experts, guaranteeing you top-notch quality and peace of mind. Whether you’re looking to sell your current ride or trying to find the perfect bike for your needs, FixMyCycle’s user-friendly marketplace simplifies the buying and selling process, saving you time and effort. Join us today and enjoy a hassle-free journey in the world of pre-owned cycling! </p>
+        
+      </div>
+      <div class="text-center" style="padding: 20px;" >
+        <span class="p-4">
+       
+        <a href="./bookmyslot.html"><button class="booknowbutton">Sell your ride</button></a>
+    </span>
+        <span class="p-4">
+        <a href="./bookmyslot.html"><button class="booknowbutton">Buy your ride</button></a>
+      </span>
+     </div>
+    </div>
+  </div>
+</section>
+
 
 
   <section class="section-padding mt-5" >
